--- a/IrrduinoDroid/IrrduinoRemote/res/xml/settings.xml
+++ b/IrrduinoDroid/IrrduinoRemote/res/xml/settings.xml
@@ -2,7 +2,9 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <PreferenceCategory
-            android:title="@string/controller_settings_title">    
+            android:key="controller_settings_category"
+            android:title="@string/controller_settings_title"
+            >    
 	<EditTextPreference
 	        android:key="controller_host_name"
 	        android:title="@string/controller_host_name"
@@ -16,4 +18,16 @@
 	        android:dialogTitle="@string/controller_host_name" 
 	        />
 	</PreferenceCategory>
+	
+    <PreferenceCategory 
+        android:key="about_settings_category"
+        android:title="@string/about_settings_title"
+        >
+    <Preference 
+        android:key="about_version"
+        android:title="@string/about_version"
+        android:selectable="false"
+        />
+        
+    </PreferenceCategory>
 </PreferenceScreen>
