--- a/IrrduinoServer/irrduinoserver/templates/layout.html
+++ b/IrrduinoServer/irrduinoserver/templates/layout.html
@@ -11,10 +11,10 @@
   <body>
     <h1 id="title">Irrduino Server</h1>
     <div id="main-container">
-      {% if errors %}
+      {% if action_results %}
         <ul>
-        {% for error in errors %}
-          <li>{{ error|escape }}</li>
+        {% for msg in action_results %}
+          <li>{{ msg|escape }}</li>
         {% endfor %}
         </ul>
       {% endif %}
