Added a temporary link to the reports page.

--- a/IrrduinoServer/irrduinoserver/templates/welcome.html
+++ b/IrrduinoServer/irrduinoserver/templates/welcome.html
@@ -15,4 +15,8 @@
     <input type=submit name=water-zone-1 value="Water Zone 1 for 1 Minute">
     <input type=submit name=turn-off-everything value="Turn Off Everything">
   </form>
+
+  <p>
+    Check out the <a href="/reports">reports page</a> too.
+  </p>
 {% endblock %}
