IrrduinoController - added reporting to remote host function - added /settings api for enabling and configuring reporting IrrduinoRemote - added countdown display for zone runs - added automatic controller status check on app startup - added screen to display zone run report from IrrduinoServer (incomplete)

--- a/IrrduinoDroid/IrrduinoRemote/res/menu/app_menu.xml
+++ b/IrrduinoDroid/IrrduinoRemote/res/menu/app_menu.xml
@@ -3,4 +3,7 @@
     <item android:id="@+id/preferences"
           android:title="@string/menu_item_settings"
           android:icon="@drawable/ic_menu_settings" />
+    <item android:id="@+id/report"
+          android:title="@string/menu_item_report"
+          android:icon="@drawable/ic_menu_report" />
 </menu>
