Tweaked the style for the title and fieldsets

--- a/IrrduinoServer/static/css/layout.css
+++ b/IrrduinoServer/static/css/layout.css
@@ -13,7 +13,15 @@ body {
 }
 
 #title {
-  color: white;
   margin: 20px;
   padding: 0;
+}
+
+#title a {
+  color: white;
+  text-decoration: none;
+}
+
+fieldset {
+  margin-bottom: 1em;
 }
