--- a/IrrduinoServer/irrduinoserver/templates/welcome.html
+++ b/IrrduinoServer/irrduinoserver/templates/welcome.html
@@ -1,22 +1,42 @@
 {% extends "layout.html" %}
 
 {% block content %}
-  <p>
-    Yo dawg, this site be all about waterin' Joe's lawn. Let's keep it real, yo!
-  </p>
-
-  <!-- TODO: This is just some sample code to test things out. -->
-  {% if status %}
-    <p>Status: {{ status|escape }}</p>
-  {% endif %}
+  <h3>Sprinkler Controller</h3>
 
   <form action="" method=post>
-    <input type=submit name=get-system-status value="Get System Status">
-    <input type=submit name=water-zone-1 value="Water Zone 1 for 1 Minute">
-    <input type=submit name=turn-off-everything value="Turn Off Everything">
+    <fieldset>
+      <legend>Controls</legend>
+      Water zone
+      <select name=zone>
+        {% for zone in zones %}
+          <option value="{{ zone|escape }}">{{ zone|escape }}</option>
+        {% endfor %}
+      </select>
+      for
+      <select name=time>
+        {% for time in times %}
+          <option value="{{ time|escape }}">{{ time|escape }}</option>
+        {% endfor %}
+      </select>
+      minute(s)
+      <input type=submit name=water-zone value=Water> |
+      <input type=submit name=get-system-status value="Get System Status"> |
+      <input type=submit name=turn-off-everything value="Turn Off Everything">
+    </fieldset>
   </form>
+        
+  {% if status %}
+    <form>
+      <fieldset>
+        <legend>Status</legend>
+        {% for item in status.items %}
+          {{ item.0|escape }}: {{ item.1|escape }}<br>
+        {% endfor %}
+      </fieldset>
+    </form>
+  {% endif %}
 
   <p>
-    Check out the <a href="/reports">reports page</a> too.
+    Check out the <a href=/reports>reports page</a> too.
   </p>
 {% endblock %}
