IrrduinoServer - added tabbed UI to web interface - added "About" page to web interface

--- a/IrrduinoServer/irrduinoserver/templates/layout.html
+++ b/IrrduinoServer/irrduinoserver/templates/layout.html
@@ -10,6 +10,11 @@
 
   <body>
     <h1 id="title">Irrduino Server</h1>
+      <div id="header">
+        <ul>
+          {{ tabs }}
+        </ul>
+      </div>
     <div id="main-container">
       {% if action_results %}
         <ul>
