--- a/IrrduinoServer/irrduinoserver/templates/about.html
+++ b/IrrduinoServer/irrduinoserver/templates/about.html
@@ -2,22 +2,24 @@
 
 {% block content %}
   <p>
-    Irrduino Server provides on-demand watering controls and water use reporting for a 
-    connected Irrduino sprinkler controller.</p>
-    
-    <p>The site is built using the following technologies:</p>
-    <ul>
-      <li>Google App Engine</li>
-      <li>Google Charting Tools</li>
-      <li>Python</li>
-    </ul>
+    Irrduino Server provides on-demand watering controls and water use
+    reporting for a connected Irrduino sprinkler controller.
   </p>
-  
+    
+  <p>This site is built using the following technologies:</p>
+
+  <ul>
+    <li>Python</li>
+    <li>Google App Engine</li>
+    <li>Google Charting Tools</li>
+  </ul>
+
   <p>
     Project contributors:
-    <ul>
-      <li>Joe Fernandez</li>
-      <li>JJ Behrens</li>
-    </ul>
   </p>
+
+  <ul>
+    <li>Joe Fernandez</li>
+    <li>JJ Behrens</li>
+  </ul>
 {% endblock %}
