--- a/IrrduinoServer/irrduinoserver/templates/reports.html
+++ b/IrrduinoServer/irrduinoserver/templates/reports.html
@@ -57,10 +57,16 @@
 {% endblock %}
 
 {% block content %}
-  <p>The following report shows number of gallons used in each watering zone per day.</p>
+  <p>
+    The following report shows number of gallons used in each watering zone
+    per day:
+  </p>
 
   <div id="water-usage-chart"></div>
-  <div id="water-cost-chart"></div>
-</html>
 
+  <p>
+    The following report shows daily watering cost across all zones:
+  </p>
+
+  <div id="water-cost-chart"></div>
 {% endblock %}
