Implemented an action queue in Dart

--- a/IrrduinoServer/irrduinoserver/templates/lawnville.html
+++ b/IrrduinoServer/irrduinoserver/templates/lawnville.html
@@ -25,13 +25,13 @@
 
     <!-- Created by Online Image Map Editor (http://www.maschek.hu/imagemap/index). -->
     <map name=map-map>
-      <area shape=poly id=zone1 coords="602,198,782,267,781,282,735,301,556,226,557,212" href=zone1>
-      <area shape=poly id=zone2 coords="497,210,793,329,726,363,428,238,472,222" href=zone2>
-      <area shape=poly id=zone3 coords="421,242,721,364,647,398,349,271" href=zone3>
-      <area shape=poly id=zone4 coords="574,426,536,409,535,383,474,382,313,318,313,284,345,269,641,397" href=zone4>
-      <area shape=poly id=zone5 coords="535,429,528,447,487,468,449,446,447,394,477,390,528,411" href=zone5>
-      <area shape=poly id=zone7 coords="148,354,294,410,148,475,2,413" href=zone7>
-      <area shape=poly id=zone8 coords="300,413,446,471,292,532,150,476" href=zone8>
+      <area shape=poly id=zone-1 href=javascript:void(0) class=zone coords="602,198,782,267,781,282,735,301,556,226,557,212">
+      <area shape=poly id=zone-2 href=javascript:void(0) class=zone coords="497,210,793,329,726,363,428,238,472,222">
+      <area shape=poly id=zone-3 href=javascript:void(0) class=zone coords="421,242,721,364,647,398,349,271">
+      <area shape=poly id=zone-4 href=javascript:void(0) class=zone coords="574,426,536,409,535,383,474,382,313,318,313,284,345,269,641,397">
+      <area shape=poly id=zone-5 href=javascript:void(0) class=zone coords="535,429,528,447,487,468,449,446,447,394,477,390,528,411">
+      <area shape=poly id=zone-7 href=javascript:void(0) class=zone coords="148,354,294,410,148,475,2,413">
+      <area shape=poly id=zone-8 href=javascript:void(0) class=zone coords="300,413,446,471,292,532,150,476">
     </map>
 
     <script type=text/javascript src=/static/dart/lawnville.dart.app.js></script>
