--- a/IrrduinoServer/irrduinoserver/templates/lawnville.html
+++ b/IrrduinoServer/irrduinoserver/templates/lawnville.html
@@ -17,6 +17,12 @@
       img {
         border: 0;
       }
+
+      #droid {
+        position: absolute;
+        left: 351px;
+        top: 301px;
+      }
     </style>
   </head>
 
@@ -25,14 +31,16 @@
 
     <!-- Created by Online Image Map Editor (http://www.maschek.hu/imagemap/index). -->
     <map name=map-map>
-      <area shape=poly id=zone-1 href=javascript:void(0) class=zone coords="602,198,782,267,781,282,735,301,556,226,557,212">
-      <area shape=poly id=zone-2 href=javascript:void(0) class=zone coords="497,210,793,329,726,363,428,238,472,222">
-      <area shape=poly id=zone-3 href=javascript:void(0) class=zone coords="421,242,721,364,647,398,349,271">
-      <area shape=poly id=zone-4 href=javascript:void(0) class=zone coords="574,426,536,409,535,383,474,382,313,318,313,284,345,269,641,397">
-      <area shape=poly id=zone-5 href=javascript:void(0) class=zone coords="535,429,528,447,487,468,449,446,447,394,477,390,528,411">
-      <area shape=poly id=zone-7 href=javascript:void(0) class=zone coords="148,354,294,410,148,475,2,413">
-      <area shape=poly id=zone-8 href=javascript:void(0) class=zone coords="300,413,446,471,292,532,150,476">
+      {% for zone in zones %}
+        <area shape=poly id="zone-{{ zone.0|escape }}" href=javascript:void(0)
+              class=zone coords="{{ zone.1.coordinates|escape }}"
+              data-center-x="{{ zone.1.center.0 }}"
+              data-center-y="{{ zone.1.center.1 }}">
+      {% endfor %}
     </map>
+
+    <img src=/static/images/droid-waiting-front.png width=53 height=93
+         id=droid>
 
     <script type=text/javascript src=/static/dart/lawnville.dart.app.js></script>
   </body>
