Use CSS to animate the droid's motion

--- a/IrrduinoServer/irrduinoserver/templates/lawnville.html
+++ b/IrrduinoServer/irrduinoserver/templates/lawnville.html
@@ -20,6 +20,11 @@
 
       #droid {
         position: absolute;
+        left: 355px;
+        top: 302px;
+        -webkit-transition-property: left, top;
+        -webkit-transition-duration: 1s;
+        -webkit-transition-timing-function: ease-in-out;
       }
     </style>
   </head>
