Use commas and periods consistently

--- a/IrrduinoServer/irrduinoserver/templates/reports.html
+++ b/IrrduinoServer/irrduinoserver/templates/reports.html
@@ -59,13 +59,13 @@
 {% block content %}
   <p>
     The following report shows number of gallons used in each watering zone
-    per day:
+    per day.
   </p>
 
   <div id="water-usage-chart"></div>
 
   <p>
-    The following report shows daily watering cost across all zones:
+    The following report shows daily watering cost across all zones.
   </p>
 
   <div id="water-cost-chart"></div>
