Added Dart and HTML5

--- a/IrrduinoServer/irrduinoserver/templates/about.html
+++ b/IrrduinoServer/irrduinoserver/templates/about.html
@@ -10,7 +10,9 @@
 
   <ul>
     <li>Python</li>
+    <li>Dart</li>
     <li>Google App Engine</li>
+    <li>HTML5</li>
     <li>Google Charting Tools</li>
   </ul>
 
