IrrduinoRemote - added fixes for pretti-fied status text IrrduinoServer - changed background color for game to match it's predecessor

--- a/IrrduinoServer/irrduinoserver/templates/lawnville.html
+++ b/IrrduinoServer/irrduinoserver/templates/lawnville.html
@@ -5,7 +5,7 @@
     <style type=text/css>
       body {
         font-family: Helvetica, Arial, sans-serif;
-        background: #ffffff;
+        background: #7be466;
 
         /* See: http://stackoverflow.com/questions/1994945/how-to-do-window-open-with-no-scrollbars-in-google-chrome */
         margin: 0;
