Tweaked the templates just enough to make them valid
The syntax is valid, but there's no way they'll run correctly.

--- a/IrrduinoServerGo/server/template/about.html
+++ b/IrrduinoServerGo/server/template/about.html
@@ -1,3 +1,4 @@
+{{define "about"}}
 {% extends "layout.html" %}
 
 {% block content %}
@@ -5,7 +6,7 @@
     Irrduino Server provides on-demand watering controls and water use
     reporting for a connected Irrduino sprinkler controller.
   </p>
-    
+
   <p>This site is built using the following technologies:</p>
 
   <ul>
@@ -25,3 +26,4 @@
     <li>JJ Behrens</li>
   </ul>
 {% endblock %}
+{{end}}
