--- a/IrrduinoServerGo/server/template/lawnville.html
+++ b/IrrduinoServerGo/server/template/lawnville.html
@@ -1,3 +1,4 @@
+{{define "lawnville"}}
 <!DOCTYPE html>
 <html lang=en>
   <head>
@@ -35,10 +36,10 @@
     <!-- Created by Online Image Map Editor (http://www.maschek.hu/imagemap/index). -->
     <map name=map-map>
       {% for zone in zones %}
-        <area shape=poly id="zone-{{ zone.0|escape }}" href=javascript:void(0)
-              class=zone coords="{{ zone.1.coordinates|escape }}"
-              data-center-x="{{ zone.1.center.0 }}"
-              data-center-y="{{ zone.1.center.1 }}">
+        <area shape=poly id="zone-{{ .zone.0|html }}" href=javascript:void(0)
+              class=zone coords="{{ .zone.1.coordinates|html }}"
+              data-center-x="{{ .zone.1.center.0 }}"
+              data-center-y="{{ .zone.1.center.1 }}">
       {% endfor %}
     </map>
 
@@ -48,3 +49,4 @@
     <script type=text/javascript src=/static/dart/lawnville.dart.app.js></script>
   </body>
 </html>
+{{end}}
