--- a/IrrduinoServerGo/server/template/layout.html
+++ b/IrrduinoServerGo/server/template/layout.html
@@ -1,3 +1,4 @@
+{{define "layout"}}
 <!DOCTYPE html>
 <html lang=en>
   <head>
@@ -11,15 +12,15 @@
 
     <div id="header">
       <ul>
-        {{ tabs }}
+        {{ .tabs }}
       </ul>
     </div>
-    
+
     <div id="main-container">
       {% if action_results %}
         <ul>
         {% for msg in action_results %}
-          <li>{{ msg|escape }}</li>
+          <li>{{ .msg|html }}</li>
         {% endfor %}
         </ul>
       {% endif %}
@@ -27,3 +28,4 @@
     </div>
   </body>
 </html>
+{{end}}
