IrrduinoServer - Added support for remote api (for data backup) - Added LV image for animation - moved the LV link for dramatic effect

--- a/IrrduinoServer/irrduinoserver/templates/about.html
+++ b/IrrduinoServer/irrduinoserver/templates/about.html
@@ -24,4 +24,8 @@
     <li>Joe Fernandez</li>
     <li>JJ Behrens</li>
   </ul>
+  
+  <p>And now for something <a href="javascript:window.open('/lawnville', 'lawnville', 
+  'width=800, height=600, status=no, toolbar=no, menubar=no, location=no, resizable=no, 
+  scrollbars=no')">completely different</a>.</p>
 {% endblock %}
