--- a/IrrduinoServer/irrduinoserver/templates/lawnville.html
+++ b/IrrduinoServer/irrduinoserver/templates/lawnville.html
@@ -45,6 +45,7 @@
     <img src=/static/images/droid-waiting-front.png width=100 height=100
          id=droid>
 
-    <script type=text/javascript src=/static/dart/lawnville.dart.app.js></script>
+    <script type=application/dart src=/static/dart/lawnville.dart></script>
+    <script src=/static/dart/dart.js></script>
   </body>
 </html>
